# DevOps-Hive

./: .gitignore  LICENSE.md  README.md  ROADMAP.md  index.yaml  renovate.json
.github/workflows/: cd.yaml  ci.yaml  pylint.yaml  scorecard.yml
app/: Dockerfile  pyproject.toml
app/config/: settings.toml
app/hive/: app.py  config.py  pyproject.toml
app/hive/hive/: app.py
app/hive/opensensemap/: api.py  client.py  config.py  dao.py  db.py  di.py  model.py  repository.py  router.py  schemas.py  service.py
app/tests/opensensemap/: integration_test.py  test_model.py  test_service.py
helm/charts/hive/: Chart.yaml
helm/charts/hive/templates/: deployment.yaml  service.yaml
helm/hive/: Chart.yaml  values.yaml
helm/hive/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/hive/templates/tests/: test-connection.yaml
k8s/: hive.yaml  kind-cluster.yaml  kind-setup.sh
k8s/apps/hive/: hive-app.yaml
k8s/apps/hive/base/: hive-ns.yaml  kustomization.yaml
k8s/bootstrap/base/: kustomization.yaml
k8s/bootstrap/components/applicationsets/: apps-appset.yaml  core-appset.yaml  kustomization.yaml
k8s/bootstrap/overlays/default/: kustomization.yaml  local-apps-appset.yaml  local-core-appset.yaml  local-git-repo.yaml
k8s/core/azure-provider/base/: kustomization.yaml  provider-azure-containerservice.yaml  provider-azure-storage.yaml
k8s/core/azure-providerconfig/base/: azure-providerconfig.yaml  azure-secret.sh  kustomization.yaml
k8s/core/control-plane-cluster/base/: core-aks-subnet.yaml  core-aks.yaml  core-composition.yaml  core-ns.yaml  core-rg.yaml  core-storage.yaml  core-vnet.yaml  core-xrd-yaml  kustomization.yaml
k8s/core/crossplane-azure/base/: azure-providerconfig.yaml  kustomization.yaml
k8s/core/crossplane/base/: azure-provider.yaml  azure-providerconfig.yaml  crossplane-ns.yaml  hive-rg.yaml  hive-vnet.yaml  kustomization.yaml
k8s/core/gitops-operator/base/: aks-secret.yaml  argocd-cm-patch.yaml  kustomization.yaml
k8s/core/sealed-secrets-operator/base/: kustomization.yaml  (+1 more)
k8s/kind/: azure-secret.sh  kind-cleanup.sh  kind-cluster.yaml  kind-setup.sh
(+7 files in other folders)
