[tool.poetry]
name = "hive"
version = "0.0.1"
description = ""
authors = ["Brian Sinkovec <bsin1807@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "hive.app:start"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
