[tool.poetry]
name = "hive"
version = "0.0.1"
description = ""
authors = ["Brian Sinkovec <bsin1807@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
requests = "^2.31.0"
prometheus-fastapi-instrumentator = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.1"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
